# predictive-vs-causal-decision-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 00_environment_check.ipynb  01_causal_data_generation.ipynb  02_predictive_baseline.ipynb  03_ate_estimators.ipynb  04_cate_and_policy.ipynb  05_robustness.ipynb
reports/tables/: ate_estimator_comparison.csv  cate_evaluation_metrics.csv  overlap_diagnostics.csv  policy_comparison.csv  predictive_baseline_metrics.csv  robustness_summary.csv
tests/: test_robustness.py
