[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive-vs-causal-decision-lab"
version = "0.1.0"
description = "A reproducible laboratory comparing predictive machine learning with causal decision intelligence."
requires-python = ">=3.11,<3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
